[tool.poetry]
name = "abc-init"
version = "0.1.0"
description = "Project initialization for Atcoder Beginner Contest"
authors = ["515hikaru <12kojima.takahiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.4.4"

[tool.poetry.scripts]
abc-init = 'abc_init.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
